--- a/char.html
+++ b/char.html
@@ -21,19 +21,19 @@ function canvasApp() {
 	var w = document.body.clientWidth;
 	var h = document.body.clientHeight - 50;
 	var arrObjChara = new Array();
-	var me = object(Me);
+	window.me;
 	window.selectedChara;
 	window.resizeChara;
 	canvas.width = w;
 	canvas.height = h;
 	textbutton.addEventListener('click', division, false);
 	canvas.addEventListener('mousedown', charaSelectd, false);
-	canvas.addEventListener('mousemove', charaDraging, false);
+	canvas.addEventListener('mousemove', charaMoving, false);
 	canvas.addEventListener('mouseup', charaDetached, false);
-
 	box();
 
 	function division(e) {
+		me = object(Me);
 		var textchara = $("input#textfield").val();
 		var arrTextChara = textchara.split('');
 		for( var i = 0; i < arrTextChara.length; i++) {
@@ -63,23 +63,22 @@ function canvasApp() {
 	function charaSelectd(e) {
 		me.down = true;
 		me.up = false;
+		box();
 		var cx = e.clientX;
 		var cy = e.clientY;
-		box();
 		if (typeof selectedChara !== 'undefined') {
 			var coordinates = coordinate(selectedChara);
-			if (coordinates.px <= cx && coordinates.nx >= cx && coordinates.py <= cy && coordinates.ny >= cy) {
-				selectedChara.rotateRestore(true, cx, cy);
-			} else if (coordinates.tlpx <= cx && coordinates.tlnx >= cx && coordinates.tlpy <= cy && coordinates.tlny >= cy) {
+			if(me.resizePositionCheck(cx, cy, coordinates.tlpx, coordinates.tlpy, selectedChara.resize_point_radius)) {
 				selectedChara.setSelectedParam('tl', cx, cy);
-			} else if (coordinates.blpx <= cx && coordinates.blnx >= cx && coordinates.blpy <= cy && coordinates.blny >= cy) {
+			} else if(me.resizePositionCheck(cx, cy, coordinates.blpx, coordinates.blpy, selectedChara.resize_point_radius)) {
 				selectedChara.setSelectedParam('bl', cx, cy);
-			} else if (coordinates.brpx <= cx && coordinates.brnx >= cx && coordinates.brpy <= cy && coordinates.brny >= cy) {
+			} else if(me.resizePositionCheck(cx, cy, coordinates.brpx, coordinates.brpy, selectedChara.resize_point_radius)) {
 				selectedChara.setSelectedParam('br', cx, cy);
-			} else if(coordinates.trpx <= cx && coordinates.trnx >= cx && coordinates.trpy <= cy && coordinates.trny >= cy) {
+			} else if(me.resizePositionCheck(cx, cy, coordinates.trpx, coordinates.trpy, selectedChara.resize_point_radius)) {
 				selectedChara.setSelectedParam('tr', cx, cy);
-			} else if(selectedChara.rotateCheck(cx, cy)) {
-				selectedChara.setSelectedParam('rt', cx, cy);
+			} else if(me.rotatePositionCheck(cx, cy, coordinates.trpx, coordinates.trpy, selectedChara.resize_point_radius, selectedChara.rotate_point_radius)) {
+				selectedChara.rotate_flg = true;
+				selectedChara.rotateRestore(true, cx, cy);
 			} else {
 				arrObjChara.unshift(selectedChara);
 				delete selectedChara;
@@ -87,23 +86,22 @@ function canvasApp() {
 		}
 		for (var i = 0; i < arrObjChara.length; i++) {
 			var objChara = arrObjChara[i];
-			var px = objChara.x;
-			var nx = objChara.x + objChara.measure.width;
-			var py = objChara.y;
-			var ny = objChara.y + objChara.font_size;
-			if (typeof selectedChara === 'undefined' && px <= cx && nx >= cx && py <= cy && ny >= cy) {
-				selectedChara = objChara;
-				selectedChara.rotateRestore(true , cx, cy);
+			var coordinates = coordinate(objChara);
+			if (typeof selectedChara === 'undefined' && coordinates.px <= cx && coordinates.nx >= cx && coordinates.py <= cy && coordinates.ny >= cy) {
 				var del_idx = i;
+				selectedChara = objChara;
+				selectedChara.rotateRestore(true, cx, cy);
+				selectedChara.rotate_flg = false;
 			} else {
-				objChara.rotateRestore(false , cx, cy);
+				objChara.rotateRestore(false, cx, cy);
 			}
 		}
 		if(typeof del_idx !== 'undefined') arrObjChara.splice(del_idx, 1);
 	}
 
-	function charaDraging(e) {
+	function charaMoving(e) {
 		if(typeof selectedChara !== 'undefined' && me.down === true && me.up === false) {
+			me.drag = true;
 			box();
 			var cx = e.clientX;
 			var cy = e.clientY;
@@ -121,9 +119,11 @@ function canvasApp() {
 					selectedChara.selected(cx, cy);
 					ctx.restore();
 				} else {
+					ctx.save();
 					selectedChara.moved(cx, cy);
-					selectedChara.meDraw();
-					selectedChara.selected(cx, cy);
+					selectedChara.rotateRestore(true, cx, cy);
+					selectedChara.rotate_flg = false;
+					ctx.restore();
 				}
 				for(var i = 0; i < arrObjChara.length; i++) {
 					var objChara = arrObjChara[i];
@@ -133,11 +133,32 @@ function canvasApp() {
 				for (var i = 0; i < arrObjChara.length; i++) {
 					var objChara = arrObjChara[i];
 					var coordinates = coordinate(objChara);
-					if (coordinates.px <= cx && coordinates.nx >= cx && coordinates.py <= cy && coordinates.ny >= cy) {
+					if (typeof selectedChara === 'undefined' && coordinates.px <= cx && coordinates.nx >= cx && coordinates.py <= cy && coordinates.ny >= cy) {
 						selectedChara = objChara;
 						arrObjChara.splice(i, 1);
 					}
 					objChara.meDraw();
+				}
+			}
+		} else {
+			if(typeof selectedChara !== 'undefined') {
+				var cx = e.clientX;
+				var cy = e.clientY;
+				var coordinates = coordinate(selectedChara);
+				if(me.resizePositionCheck(cx, cy, coordinates.tlpx, coordinates.tlpy, selectedChara.resize_point_radius)) {
+					document.body.style.cursor = "nw-resize";
+				} else if(me.resizePositionCheck(cx, cy, coordinates.blpx, coordinates.blpy, selectedChara.resize_point_radius)) {
+					document.body.style.cursor = "sw-resize";
+				} else if(me.resizePositionCheck(cx, cy, coordinates.brpx, coordinates.brpy, selectedChara.resize_point_radius)) {
+					document.body.style.cursor = "se-resize";
+				} else if(me.resizePositionCheck(cx, cy, coordinates.trpx, coordinates.trpy, selectedChara.resize_point_radius)) {
+					document.body.style.cursor = "ne-resize";
+				} else if(coordinates.px <= cx && coordinates.nx >= cx && coordinates.py <= cy && coordinates.ny >= cy){
+					document.body.style.cursor = "move";
+				} else if(me.rotatePositionCheck(cx, cy, coordinates.trpx, coordinates.trpy, selectedChara.resize_point_radius, selectedChara.rotate_point_radius)) {
+					document.body.style.cursor = "progress";
+				} else {
+					document.body.style.cursor = "default";
 				}
 			}
 		}
@@ -151,22 +172,13 @@ function canvasApp() {
 			ny: objChara.y + objChara.font_size,
 			tlpx: objChara.top_left_x,
 			tlpy: objChara.top_left_y,
-			tlnx: objChara.top_left_x + objChara.point_side_length,
-			tlny: objChara.top_left_y + objChara.point_side_length,
 			blpx: objChara.bottom_left_x,
 			blpy: objChara.bottom_left_y,
-			blnx: objChara.bottom_left_x + objChara.point_side_length,
-			blny: objChara.bottom_left_y + objChara.point_side_length,
 			brpx: objChara.bottom_right_x,
 			brpy: objChara.bottom_right_y,
-			brnx: objChara.bottom_right_x + objChara.point_side_length,
-			brny: objChara.bottom_right_y + objChara.point_side_length,
 			trpx: objChara.top_right_x,
 			trpy: objChara.top_right_y,
-			trnx: objChara.top_right_x + objChara.point_side_length,
-			trny: objChara.top_right_y + objChara.point_side_length,
 		};
-
 		return coordinates;
 	}
 
@@ -176,45 +188,24 @@ function canvasApp() {
 		box();
 		if (typeof selectedChara !== 'undefined') {
 			if (selectedChara.resizing_flg) {
-				selectedChara.resizing_flg = false;
 				selectedChara.resizeEnd();
 				selectedChara.selected(cx, cy);
 				selectedChara.meDraw();
-			} else if (selectedChara.rotate_flg) {
-				selectedChara.rotate_flg = false;
-				ctx.save();
-				selectedChara.trans_x = 0;
-				selectedChara.trans_y = 0;
-				selectedChara.rotated(cx, cy);
-				selectedChara.rotateDraw(cx, cy);
-				selectedChara.selected(cx, cy);
-				ctx.restore();
+			} else if(selectedChara.rotate_flg) {
+				selectedChara.rotateRestore(true, cx, cy);
+				selectedChara.allEnd();
 			} else {
-				if(selectedChara.angle === 0) {
-					selectedChara.selected(cx, cy);
-					selectedChara.meDraw();
-				} else {
-					ctx.save();
-					selectedChara.rotated(cx, cy);
-					selectedChara.rotateDraw(cx, cy);
-					selectedChara.selected(cx, cy);
-					ctx.restore();
-				}
+				selectedChara.rotateRestore(true, cx, cy);
+				selectedChara.allEnd();
 			}
 		}
 		for (var i = 0; i < arrObjChara.length; i++) {
 			var objChara = arrObjChara[i];
-			if(objChara.angle === 0) {
-				objChara.meDraw();
-			} else {
-				ctx.save();
-				objChara.rotated(cx, cy);
-				objChara.rotateDraw(cx, cy);
-				ctx.restore();
-			}
+			objChara.rotateRestore(false, cx, cy);
 		}
 		me.down = false;
 		me.up = true;
+		me.drag = false;
 	}
 
 	var Chara = {
@@ -223,6 +214,8 @@ function canvasApp() {
 		y:0,
 		trans_x: 0,
 		trans_y: 0,
+		center_x: 0,
+		center_y: 0,
 		top_left_x: 0,
 		top_left_y: 0,
 		bottom_left_x: 0,
@@ -231,15 +224,14 @@ function canvasApp() {
 		bottom_right_y: 0,
 		top_right_x: 0,
 		top_right_y: 0,
-		rotate_x: 0,
-		rotate_y: 0,
-		rotate_radius: 5,
 		font_size: 30,
 		start_font_size: 30,
-		point_side_length: 10,
+		point_side_length: 5,
 		font_type: 'px monospace',
 		measure: 0,
 		start_measure: 0,
+		resize_point_radius: 5,
+		rotate_point_radius: 10,
 		resizing_flg: false,
 		rotate_flg: false,
 		select_type: '',
@@ -264,6 +256,8 @@ function canvasApp() {
 			ctx.textBaseline = 'top';
 			this.measure = ctx.measureText(this.chara);
 			this.start_measure = this.measure;
+			this.center_x = this.x + this.measure.width / 2;
+			this.center_y = this.y + this.font_size / 2;
 			ctx.fillText(this.chara, this.x, this.y);
 		},
 
@@ -272,77 +266,69 @@ function canvasApp() {
 			this.bottomLeftPoint();
 			this.topRightPoint();
 			this.bottomRightPoint();
-			this.rotatePoint();
 			me.pre_x = cx;
 			me.pre_y = cy;
 		},
 
 		topLeftPoint: function() {
+			this.top_left_x = this.x;
+			this.top_left_y = this.y;
+			var x = this.top_left_x + this.point_side_length;
+			var y = this.top_left_y + this.point_side_length;
+			ctx.beginPath();
+			ctx.moveTo(this.top_left_x, this.top_left_y);
+			ctx.lineTo(this.top_left_x, y);
+			ctx.moveTo(this.top_left_x, this.top_left_y);
+			ctx.lineTo(x, this.top_left_y);
 			ctx.strokeStyle = 'rgba(255, 0, 0, 1)';
-			var x = this.x - this.point_side_length;
-			var y = this.y - this.point_side_length;
-			this.top_left_x = x;
-			this.top_left_y = y;
-			ctx.strokeRect(x, y, this.point_side_length, this.point_side_length);
+			ctx.stroke();
 		},
 
 		bottomLeftPoint: function() {
+			this.bottom_left_x = this.x;
+			this.bottom_left_y = this.y + this.font_size;
+			var x = this.bottom_left_x + this.point_side_length;
+			var y = this.bottom_left_y - this.point_side_length;
+			ctx.beginPath();
+			ctx.moveTo(this.bottom_left_x, this.bottom_left_y);
+			ctx.lineTo(this.bottom_left_x, y);
+			ctx.moveTo(this.bottom_left_x, this.bottom_left_y);
+			ctx.lineTo(x, this.bottom_left_y);
 			ctx.strokeStyle = 'rgba(255, 0, 0, 1)';
-			var cx = this.x;
-			var cy = this.y + this.font_size;
-			var x = cx - this.point_side_length;
-			var y = cy;
-			this.bottom_left_x = x;
-			this.bottom_left_y = y;
-			ctx.strokeRect(x, y, this.point_side_length, this.point_side_length);
+			ctx.stroke();
 		},
 
 		bottomRightPoint: function() {
+			this.bottom_right_x = this.x + this.measure.width;
+			this.bottom_right_y = this.y + this.font_size;
+			var x = this.bottom_right_x - this.point_side_length;
+			var y = this.bottom_right_y - this.point_side_length;;
+			ctx.beginPath();
+			ctx.moveTo(this.bottom_right_x, this.bottom_right_y);
+			ctx.lineTo(this.bottom_right_x, y);
+			ctx.moveTo(this.bottom_right_x, this.bottom_right_y);
+			ctx.lineTo(x, this.bottom_right_y);
 			ctx.strokeStyle = 'rgba(255, 0, 0, 1)';
-			var cx = this.x + this.measure.width;
-			var cy = this.y + this.font_size;
-			var x = cx;
-			var y = cy;
-			this.bottom_right_x = x;
-			this.bottom_right_y = y;
-			ctx.strokeRect(x, y, this.point_side_length, this.point_side_length);
+			ctx.stroke();
 		},
 
 		topRightPoint: function() {
-			ctx.strokeStyle = 'rgba(255, 0, 0, 1)';
-			var cx = this.x + this.measure.width;
-			var cy = this.y;
-			var x = cx;
-			var y = cy - this.point_side_length;
-			this.top_right_x = x;
-			this.top_right_y = y;
-			ctx.strokeRect(x, y, this.point_side_length, this.point_side_length);
-		},
-
-		rotatePoint: function() {
-			this.rotate_x = this.top_right_x + this.point_side_length + this.rotate_radius / 2 + 1;
-			this.rotate_y = this.top_right_y - this.rotate_radius / 2 - 1;
+			this.top_right_x = this.x + this.measure.width;
+			this.top_right_y = this.y;
+			var x = this.top_right_x - this.point_side_length;
+			var y = this.top_right_y + this.point_side_length;
 			ctx.beginPath();
-			ctx.fillStyle = 'rgba(255, 0, 0, 1)';
-			ctx.lineWidth = 0;
-			ctx.arc(this.rotate_x, this.rotate_y, this.rotate_radius, 0, Math.PI * 2, true);
-			ctx.fill();
-		},
-
-		rotateCheck: function(cx, cy) {
-			var x = this.rotate_x - cx;
-			var y = this.rotate_y - cy;
-			if(Math.sqrt(x * x + y * y) <= this.rotate_radius) return true;
-			return false;
+			ctx.moveTo(this.top_right_x, this.top_right_y);
+			ctx.lineTo(this.top_right_x, y);
+			ctx.moveTo(this.top_right_x, this.top_right_y);
+			ctx.lineTo(x, this.top_right_y);
+			ctx.strokeStyle = 'rgba(255, 0, 0, 1)';
+			ctx.stroke();
 		},
 
 		setSelectedParam: function(select_type, cx, cy) {
 			this.select_type = select_type;
-			if(select_type !== 'rt') {
-				this.resizing_flg = true;
-			} else {
-				this.rotate_flg = true;
-			}
+			if(select_type !== 'rt') this.resizing_flg = true;
 			this.selected(cx, cy);
 			this.meDraw();
 		},
@@ -350,6 +336,8 @@ function canvasApp() {
 		moved: function(cx, cy) {
 			this.x += cx - me.pre_x;
 			this.y += cy - me.pre_y;
+			this.center_x = this.x + this.measure.width / 2;
+			this.center_y = this.y + this.font_size / 2;
 		},
 
 		resized: function(cx, cy) {
@@ -373,52 +361,6 @@ function canvasApp() {
 			ctx.fillText(this.chara, this.x, this.y);
 		},
 
-		rotated: function(cx, cy) {
-			this.trans_x = this.x + this.measure.width / 2;
-			this.trans_y = this.y + this.font_size / 2;
-/*
-			var vx1 = me.pre_x - this.trans_x;
-			var vy1 = me.pre_y - this.trans_y;
-			var vx2 = cx - this.trans_x;
-			var vy2 = cy - this.trans_y;
-*/
-			if(this.trans_x > me.pre_x) {
-				var vx1 = this.trans_x - me.pre_x;
-			} else {
-				var vx1 = me.pre_x - this.trans_x;
-			}
-			if(this.trans_y > me.pre_y) {
-				var vy1 = this.trans_y - me.pre_y;
-			} else {
-				var vy1 = me.pre_y - this.trans_y;
-			}
-			if(cx > this.trans_x) {
-				var vx2 = cx - this.trans_x;
-			} else {
-				var vx2 = this.trans_x - cx;
-			}
-			if(cy > this.trans_y) {
-				var vy2 = cy - this.trans_y;
-			} else {
-				var vy2 = this.trans_y - cy;
-			}
-
-			var cos = (vx1 * vy1 + vx2 * vy2) / Math.sqrt((vx1 * vx1 + vy1 * vy1) * (vx2 * vx2 + vy2 * vy2));
-			this.angle += Math.acos(cos * Math.PI / 180);
-			if(this.angle > 360) this.angle - 360;
-			ctx.translate(this.trans_x, this.trans_y);
-			ctx.rotate(this.angle * Math.PI / 180);
-			ctx.translate(-1 * this.trans_x, -1 * this.trans_y);
-		},
-
-		rotateDraw: function() {
-			ctx.fillStyle = 'rgba(' + this.r + ', ' + this.g + ', ' + this.b + ', ' + this.a + ')';
-			ctx.font = this.font_size + this.font_type;
-			ctx.textBaseline = 'top';
-			this.measure = ctx.measureText(this.chara);
-			ctx.fillText(this.chara, this.x, this.y);
-		},
-
 		rotateRestore: function(selected, cx, cy) {
 			ctx.save();
 			if(this.angle === 0) {
@@ -427,8 +369,49 @@ function canvasApp() {
 				this.rotated(cx, cy);
 				this.rotateDraw(cx, cy);
 			}
+			this.rotate_flg = true;
 			if(selected) this.selected(cx, cy);
 			ctx.restore();
+		},
+
+		rotated: function(cx, cy) {
+			if(me.down === true && me.up === false && me.drag === true && this.rotate_flg === true) {
+				if(this.center_x > me.pre_x) {
+					var vx1 = this.center_x - me.pre_x;
+				} else {
+					var vx1 = me.pre_x - this.center_x;
+				}
+				if(this.center_y > me.pre_y) {
+					var vy1 = this.center_y - me.pre_y;
+				} else {
+					var vy1 = me.pre_y - this.center_y;
+				}
+				if(cx > this.center_x) {
+					var vx2 = cx - this.center_x;
+				} else {
+					var vx2 = this.center_x - cx;
+				}
+				if(cy > this.center_y) {
+					var vy2 = cy - this.center_y;
+				} else {
+					var vy2 = this.center_y - cy;
+				}
+
+				var cos = (vx1 * vy1 + vx2 * vy2) / Math.sqrt((vx1 * vx1 + vy1 * vy1) * (vx2 * vx2 + vy2 * vy2));
+				this.angle += Math.acos(cos * Math.PI / 180);
+				if(this.angle > 360) this.angle - 360;
+			}
+			ctx.translate(this.center_x, this.center_y);
+			ctx.rotate(this.angle * Math.PI / 180);
+			ctx.translate(-1 * this.center_x, -1 * this.center_y);
+		},
+
+		rotateDraw: function() {
+			ctx.fillStyle = 'rgba(' + this.r + ', ' + this.g + ', ' + this.b + ', ' + this.a + ')';
+			ctx.font = this.font_size + this.font_type;
+			ctx.textBaseline = 'top';
+			this.measure = ctx.measureText(this.chara);
+			ctx.fillText(this.chara, this.x, this.y);
 		},
 
 		translateChange: function() {
@@ -448,25 +431,68 @@ function canvasApp() {
 		},
 
 		resizeEnd: function() {
+			selectedChara.resizing_flg = false;
 			this.x += this.trans_x;
 			this.y += this.trans_y;
 			this.trans_x = 0;
 			this.trans_y = 0;
 			this.start_font_size = this.font_size;
+			this.allEnd();
 		},
 
-		rotateEnd: function() {
-			ctx.save();
-			this.rotateDraw();
-			ctx.restore();
+		allEnd: function() {
+			this.rotate_flg = false;
+			var radian = this.angle * Math.PI / 180;
+			var tl_x = this.top_left_x - this.center_x;
+			var tl_y = this.top_left_y - this.center_y;
+			var bl_x = this.bottom_left_x - this.center_x;
+			var bl_y = this.bottom_left_y - this.center_y;
+			var br_x = this.bottom_right_x - this.center_x;
+			var br_y = this.bottom_right_y - this.center_y;
+			var tr_x = this.top_right_x - this.center_x;
+			var tr_y = this.top_right_y - this.center_y;
+			this.top_left_x = this.center_x + (Math.cos(radian) * tl_x - Math.sin(radian) * tl_y);
+			this.top_left_y = this.center_y + (Math.cos(radian) * tl_y + Math.sin(radian) * tl_x);
+			this.bottom_left_x = this.center_x + (Math.cos(radian) * bl_x - Math.sin(radian) * bl_y);
+			this.bottom_left_y = this.center_y + (Math.cos(radian) * bl_y + Math.sin(radian) * bl_x);
+			this.bottom_right_x = this.center_x + (Math.cos(radian) * br_x - Math.sin(radian) * br_y);
+			this.bottom_right_y = this.center_y + (Math.cos(radian) * br_y + Math.sin(radian) * br_x);
+			this.top_right_x = this.center_x + (Math.cos(radian) * tr_x - Math.sin(radian) * tr_y);
+			this.top_right_y = this.center_y + (Math.cos(radian) * tr_y + Math.sin(radian) * tr_x);
+			ctx.beginPath();
+			ctx.moveTo(this.center_x, this.center_y);
+			ctx.lineTo(this.top_left_x, this.top_left_y);
+			ctx.moveTo(this.center_x, this.center_y);
+			ctx.lineTo(this.bottom_left_x, this.bottom_left_y);
+			ctx.moveTo(this.center_x, this.center_y);
+			ctx.lineTo(this.bottom_right_x, this.bottom_right_y);
+			ctx.moveTo(this.center_x, this.center_y);
+			ctx.lineTo(this.top_right_x, this.top_right_y);
+			ctx.stroke();
 		}
 	};
 
 	var Me = {
 		down: false,
 		up: true,
+		drag: false,
 		pre_x: 0,
-		pre_y: 0
+		pre_y: 0,
+
+		resizePositionCheck: function(cx, cy, rx, ry, radius) {
+			var x = cx - rx;
+			var y = cy - ry;
+			if(radius >= Math.sqrt(x * x + y * y)) return true;
+			return false;
+		},
+
+		rotatePositionCheck: function(cx, cy, rx, ry, radius1, radius2) {
+			var x = cx - rx;
+			var y = cy - ry;
+			var r = Math.sqrt(x * x + y * y);
+			if(radius1 <= r && radius2 >= r) return true;
+			return false;
+		}
 	};
 }
 
