--- a/gantt.html
+++ b/gantt.html
@@ -1,6 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="utf-8">
 <head>
 <title>Insert title here</title>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!--[if lt IE 9]>
+	<script type="text/javascript" src="excanvas.min.js"></script>
+<![endif]-->
 <style type="text/css">
 * {
 	margin: 0;
@@ -8,7 +13,11 @@
 }
 </style>
 <script type="text/javascript">
-window.addEventListener('load', eventWindowLoaded, false);
+try {
+	window.addEventListener('load', eventWindowLoaded, false);
+} catch(e) {
+	window.attachEvent('load', eventWindowLoaded);
+}
 function eventWindowLoaded() {
 	canvasApp();
 }
@@ -28,16 +37,18 @@ function canvasApp() {
 
 	var Col = {
 		time: '',
-		x: 100,
+		x: 127,
 		y: 20,
 		brock_size: 40,
-		font_size: 10,
+		font_size: 12,
 		font_type: 'px monospace',
 
 		meDraw: function() {
 			ctx.fillStyle = 'rgba(0, 0, 0, 1)';
 			ctx.font = this.font_size + this.font_type;
 			ctx.textBaseline = 'top';
+			ctx.textAlign = 'center';
+			console.log(ctx.measureText(this.time));
 			ctx.fillText(this.time, this.x, this.y);
 		}
 	};
@@ -46,13 +57,14 @@ function canvasApp() {
 		date: '',
 		x: 30,
 		y: 50,
-		font_size: 10,
+		font_size: 12,
 		font_type: 'px monospace',
 
 		meDraw: function() {
 			ctx.fillStyle = 'rgba(0, 0, 0, 1)';
 			ctx.font = this.font_size + this.font_type;
 			ctx.textBaseline = 'top';
+			ctx.textAlign = 'left';
 			ctx.fillText(this.date, this.x, this.y);
 		}
 	};
@@ -68,7 +80,7 @@ function canvasApp() {
 		a: 0,
 
 		meDraw: function() {
-			ctx.strokeStyle = 'rgba(255,0,0,1)';
+			ctx.strokeStyle = 'rgba(255, 255 ,255 ,1)';
 			ctx.strokeRect(this.x, this.y, this.width, this.height);
 			ctx.fillStyle = 'rgba(' + this.r + ', ' + this.g + ', ' + this.b + ', ' + this.a + ')';
 			ctx.fillRect(this.x, this.y, this.width, this.height);
@@ -76,24 +88,24 @@ function canvasApp() {
 
 		setColor: function(type) {
 			if(type === 0) {
-				this.r = 150;
-				this.g = 150;
+				this.r = 200;
+				this.g = 200;
 				this.b = 0;
 				this.a = 1;
 			} else if(type === 1) {
 				this.r = 0;
-				this.g = 150;
-				this.b = 150;
+				this.g = 200;
+				this.b = 200;
 				this.a = 1;
 			} else if(type === 2) {
-				this.r = 150;
+				this.r = 200;
 				this.g = 0;
-				this.b = 150;
+				this.b = 170;
 				this.a = 1;
 			} else if(type === 3) {
-				this.r = 50;
-				this.g = 150;
-				this.b = 50;
+				this.r = 100;
+				this.g = 200;
+				this.b = 100;
 				this.a = 1;
 			}
 		}
@@ -103,29 +115,28 @@ function canvasApp() {
 		"2012/06/01": [
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
-			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0
+			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0
 		],
 		"2012/06/02": [
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
-			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0
+			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0
 		],
 		"2012/06/03": [
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
-			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0
+			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0
 		],
 		"2012/06/04": [
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
-			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0
+			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0
 		],
 		"2012/06/05": [
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
 			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0,
-			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0,0,0
-		],
-
+			0,0,0,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,3,3,3,3,3,0,0,0
+		]
 	}
 
 	var canvas = document.getElementById('canvas');
@@ -150,7 +161,7 @@ function canvasApp() {
 			height += j * 30;
 			for(var k = 1; k < array.length; k++) {
 				var objSegment = object(Segment);
-				objSegment.x = 75;
+				objSegment.x = 100;
 				objSegment.y = height;
 				objSegment.width = 8;
 				objSegment.height = 20;
@@ -168,8 +179,8 @@ function canvasApp() {
 		var under_y = arrSegment.pop().y + 30;
 		ctx.beginPath();
 		ctx.strokeStyle = 'rgba(100, 100, 100, 0.5)';
-		ctx.moveTo(Col.x - 18, Col.y - 10);
-		ctx.lineTo(Col.x - 18, under_y);
+		ctx.moveTo(104, Col.y - 10);
+		ctx.lineTo(104, under_y);
 		ctx.stroke();
 		while(i < 24) {
 			var objCol = object(Col);
@@ -179,8 +190,8 @@ function canvasApp() {
 			arrCol.push(objCol);
 			ctx.beginPath();
 			ctx.strokeStyle = 'rgba(100, 100, 100, 0.5)';
-			ctx.moveTo(objCol.x + 22, objCol.y - 10);
-			ctx.lineTo(objCol.x + 22, under_y);
+			ctx.moveTo(objCol.x + 20, objCol.y + 15);
+			ctx.lineTo(objCol.x + 20, objCol.y + 25);
 			ctx.stroke();
 			i++;
 		}
@@ -197,7 +208,7 @@ function canvasApp() {
 			ctx.beginPath();
 			ctx.strokeStyle = 'rgba(100, 100, 100, 0.5)';
 			ctx.moveTo(objRow.x, objRow.y - 10);
-			ctx.lineTo(end_x + 50, objRow.y - 10);
+			ctx.lineTo(end_x + 20, objRow.y - 10);
 			ctx.stroke();
 			j++;
 		}
